--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "color-temperature": "^0.2.7",
     "gh-pages": "^3.1.0",
     "moment-timezone": "^0.5.31",
+    "prettier": "^2.1.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-icons": "^3.11.0",
@@ -20,6 +21,7 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
     "react-spring": "^8.0.27",
+    "react-test-renderer": "^16.13.1",
     "react-transition-group": "^4.4.1",
     "redux": "^4.0.5",
     "redux-actions": "^2.6.5",
@@ -50,5 +52,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "enzyme": "^3.11.0",
+    "enzyme-adapter-react-16": "^1.15.5"
   }
 }
